--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tenable</groupId>
   <artifactId>tenable-io-thin</artifactId>
-  <version>1.4.1</version>
+  <version>1.4.1-SNAPSHOT</version>
   <inceptionYear>2017</inceptionYear>
   <licenses>
     <license>
