Add session api

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tenable</groupId>
   <artifactId>tenable-io-thin-sdk</artifactId>
-  <version>1.4.1</version>
+  <version>1.4.1-SNAPSHOT</version>
   <inceptionYear>2017</inceptionYear>
   <licenses>
     <license>
@@ -22,7 +22,7 @@
 
     <httpmime.version>4.5.10</httpmime.version>
     <httpasyncclient.version>4.1.4</httpasyncclient.version>
-    <jackson.version>[2.0.0,)</jackson.version>
+    <jackson.version>2.8.11</jackson.version>
     <junit.version>4.12</junit.version>
     <lombok.version>1.18.10</lombok.version>
     <slf4j.version>1.7.29</slf4j.version>
