[maven-release-plugin] prepare release tenable-io-thin-sdk

--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tenable</groupId>
   <artifactId>tenable-io-thin-sdk</artifactId>
-  <version>1.4.1-SNAPSHOT</version>
+  <version>1.4.1</version>
   <inceptionYear>2017</inceptionYear>
   <licenses>
     <license>
@@ -366,7 +365,7 @@
     <connection>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</connection>
     <developerConnection>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</developerConnection>
     <url>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</url>
-    <tag>HEAD</tag>
+    <tag>tenable-io-thin-sdk</tag>
   </scm>
 
 </project>
