--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tenable</groupId>
   <artifactId>tenable-io-thin-sdk</artifactId>
-  <version>1.4.2-SNAPSHOT</version>
+  <version>1.4.1-SNAPSHOT</version>
   <inceptionYear>2017</inceptionYear>
   <licenses>
     <license>
@@ -351,6 +351,16 @@
       </plugin>
     </plugins>
   </reporting>
+  <distributionManagement>
+    <repository>
+      <id>nexus</id>
+      <url>http://fmnexus.securepassage.com/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>nexus</id>
+      <url>http://fmnexus.securepassage.com/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
   <scm>
     <connection>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</connection>
     <developerConnection>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</developerConnection>
