--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tenable</groupId>
   <artifactId>tenable-io-thin-sdk</artifactId>
-  <version>1.4.1</version>
+  <version>1.4.2-SNAPSHOT</version>
   <inceptionYear>2017</inceptionYear>
   <licenses>
     <license>
@@ -365,7 +365,7 @@
     <connection>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</connection>
     <developerConnection>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</developerConnection>
     <url>scm:git:https://github.com/firemondev/Tenable.io-SDK-for-Java.git</url>
-    <tag>1.4.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
